<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main" >

    <RelativeLayout
        android:id="@+id/title_line"
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="fill_parent"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/login_logo_top" >
        </ImageView>

        <ImageView
            android:id="@+id/image_text"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:scaleType="centerInside"
            android:src="@drawable/login_text_top" >
        </ImageView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_line"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_edit"
        android:orientation="vertical"
        android:padding="1dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@drawable/round_top"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout 
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
	            <ImageView
	                android:id="@+id/iv_login_uname"
	                android:layout_width="20dp"
	                android:layout_height="20dp"
	                android:scaleType="centerInside"
	                android:src="@drawable/uname" >
	            </ImageView>
            </LinearLayout>

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/round_buttom"
                android:hint="@string/hint_username"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:textColor="@color/logincontent"
                android:textColorHint="#E7E6F0"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:layout_marginTop="16dip"
            android:background="@drawable/round_top"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

           <LinearLayout 
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
	            <ImageView
	                android:id="@+id/iv_login_upass"
	                android:layout_width="20dp"
	                android:layout_height="20dp"
	                android:scaleType="centerInside"
	                android:src="@drawable/upass" >
	            </ImageView>
            </LinearLayout>

            <EditText
                android:id="@+id/edt_pwd"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/round_buttom"
                android:hint="@string/hint_userpwd"
                android:inputType="textPassword"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:textColor="@color/logincontent"
                android:textColorHint="#E7E6F0"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="10dp"
        android:button="@drawable/checkbox"
        android:text="@string/jizhumima"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/checkBox1"
        android:layout_marginTop="15dp"
        android:background="@drawable/login"
        android:text="登录"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_version"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:textColor="@color/loginsupport"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/hotline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/ver"
        android:text="@string/txt_supportnumber"
        android:textColor="@color/loginsupport"
        android:textSize="16sp" />

</RelativeLayout>